--- a/.eslintrc
+++ b/.eslintrc
@@ -1,15 +1,18 @@
 {
-  "extends": ["prettier", "prettier/react"],
-  "plugins": ["react", "prettier"],
-  "rules": {
-    "prettier/prettier": ["error", { "singleQuote": true }]
+  "plugins": ["prettier", "react"],
+  "extends": [
+    "eslint:recommended",
+    "plugin:react/recommended",
+    "plugin:prettier/recommended"
+  ],
+  "env": {
+    "shared-node-browser": true,
+    "mocha": true,
+    "jest": true
   },
   "parserOptions": {
-    "ecmaVersion": 2017,
+    "ecmaVersion": 2018,
     "sourceType": "module",
-    "ecmaFeatures": {
-      "experimentalObjectRestSpread": true,
-      "jsx": true
-    }
+    "ecmaFeatures": { "jsx": true }
   }
 }
