update dotfiles from hp pc

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,50 +1,51 @@
 [user]
-  name = gabssnake
-  email = gabssnake@gmail.com
+	name = Gabriel VIVAS
+	email = gabriel.vivas@stormshield.eu
 
 [core]
-  editor = subl -n -w
-  excludesfile = ~/.gitignore_global
-  attributesfile = ~/.gitattributes
+    editor = subl -n -w
+    excludesfile = ~/.gitignore_global
 
 [color]
-  branch = auto
-  diff = auto
-  grep = always
-  interactive = auto
-  status = auto
-  ui = auto
+    branch = auto
+    diff = auto
+    grep = always
+    interactive = auto
+    status = auto
+    ui = auto
 
 [credential]
-  helper = osxkeychain
+   helper = cache
 
 [push]
-  default = current
-  followTags = true
-
-[branch]
-  autosetuprebase = always
+    default = current
+    followTags = true
 
 [alias]
-  staged = diff --staged
-  unstage = reset HEAD --
-  squash = reset --hard HEAD~1
-  s = status -sb
-  a = add -A :/
-  p = add -p
-  c = commit -m
-  l =    log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
-  lola = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
+    staged = diff --staged
+    unstage = reset HEAD --
+    squash = reset --hard HEAD~1
+    s = status -sb
+    ss = status -sb
+    sss = status -sb
+    a = add -A :/
+    p = add -p
+    c = commit -m
+    lola = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset'
 
 [apply]
-  whitespace = nowarn
+    whitespace = nowarn
 
 [diff]
-  submodule = log
+    submodule = log
+	colorMoved = default
 
 [status]
-  submoduleSummary = true
-  showUntrackedFiles = all
+    submoduleSummary = true
+    showUntrackedFiles = all
 
 [help]
-  autocorrect = 1
+    autocorrect = 1
+
+[pull]
+   rebase = true
