fix node repl history, other minor stuff

--- a/.gitconfig
+++ b/.gitconfig
@@ -53,4 +53,4 @@
   path = ~/.workrc.gitconfig
 
 [blame]
-	ignoreRevsFile = /home/gvivas/.git-blame-ignore-revs
+	ignoreRevsFile = /home/gvivas/src/smc/.revsignore
